// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestCollection Component should render 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Name",
        "sortKey": "name",
        "width": "25%",
      },
      Object {
        "label": "Metric",
        "sortKey": "alert_metric",
      },
      Object {
        "label": "Enabled",
        "sortKey": "enabled",
      },
      null,
    ]
  }
  defaultSortColumn="name"
  defaultSortDirection="desc"
  filterBox={
    Object {
      "exampleModifiers": Array [
        "enabled",
        "metric",
      ],
      "itemToStringKeys": Array [
        "name",
        "id",
        "enabled",
        "metric",
      ],
      "keyMap": Object {
        "metric": "alert_metric",
      },
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "alert_metric": "monthly_sending_limit",
        "enabled": true,
        "id": "id-1",
        "name": "my alert 1",
        "subaccount_id": 101,
      },
      Object {
        "alert_metric": "monthly_sending_limit",
        "enabled": false,
        "id": "id-2",
        "name": "my alert 2",
      },
      Object {
        "alert_metric": "another_metric",
        "enabled": true,
        "id": "id-3",
        "name": "my alert 3",
      },
    ]
  }
/>
`;

exports[`TestCollection Component should render row data properly 1`] = `
Array [
  <React.Fragment>
    <PageLink
      to="/alerts/edit/id-1?subaccount=101"
    >
      my alert 1
    </PageLink>
  </React.Fragment>,
  <Tag>
    Monthly Sending Limit
  </Tag>,
  <Connect(AlertToggle)
    enabled={true}
    id="id-1"
    subaccountId={101}
  />,
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <Popover
      bottom={true}
      left={true}
      right={true}
      trigger={
        <Button
          flat={true}
          size="large"
        >
          <MoreHoriz
            size={21}
          />
        </Button>
      }
    >
      <ActionList
        actions={
          Array [
            Object {
              "component": [Function],
              "content": "Edit Alert",
              "section": 1,
              "to": "/alerts/edit/id-1?subaccount=101",
            },
            Object {
              "content": "Delete Alert",
              "onClick": [Function],
              "section": 2,
            },
          ]
        }
        groupByKey="section"
      />
    </Popover>
  </div>,
]
`;

exports[`TestCollection Component should render row data properly 2`] = `
Array [
  <React.Fragment>
    <PageLink
      to="/alerts/edit/id-2"
    >
      my alert 2
    </PageLink>
  </React.Fragment>,
  <Tag>
    Monthly Sending Limit
  </Tag>,
  <Connect(AlertToggle)
    enabled={false}
    id="id-2"
  />,
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <Popover
      bottom={true}
      left={true}
      right={true}
      trigger={
        <Button
          flat={true}
          size="large"
        >
          <MoreHoriz
            size={21}
          />
        </Button>
      }
    >
      <ActionList
        actions={
          Array [
            Object {
              "component": [Function],
              "content": "Edit Alert",
              "section": 1,
              "to": "/alerts/edit/id-2",
            },
            Object {
              "content": "Delete Alert",
              "onClick": [Function],
              "section": 2,
            },
          ]
        }
        groupByKey="section"
      />
    </Popover>
  </div>,
]
`;

exports[`TestCollection Component should render row data properly 3`] = `
Array [
  <React.Fragment>
    <PageLink
      to="/alerts/edit/id-3"
    >
      my alert 3
    </PageLink>
  </React.Fragment>,
  <Tag>
    another_metric
  </Tag>,
  <Connect(AlertToggle)
    enabled={true}
    id="id-3"
  />,
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <Popover
      bottom={true}
      left={true}
      right={true}
      trigger={
        <Button
          flat={true}
          size="large"
        >
          <MoreHoriz
            size={21}
          />
        </Button>
      }
    >
      <ActionList
        actions={
          Array [
            Object {
              "component": [Function],
              "content": "Edit Alert",
              "section": 1,
              "to": "/alerts/edit/id-3",
            },
            Object {
              "content": "Delete Alert",
              "onClick": [Function],
              "section": 2,
            },
          ]
        }
        groupByKey="section"
      />
    </Popover>
  </div>,
]
`;
